major refactoring / Java and Spring updates